# robocup_ur5e

./: .env  .gitignore  docker-compose.yml
docker/: Dockerfile.brain  Dockerfile.path_planning  Dockerfile.yolo_gpu  entrypoint.sh  run  run_brain_and_yolo_docker.bash  run_brain_docker.bash  run_grasp_docker.bash  run_path_planning_docker.bash  run_yolo_docker.bash
docs/: SETUP_GUIDE.md
scripts/: .env  check_running.sh  download_models.sh  fix_git_and_push.sh  rebuild_all.sh  setup_container_env.sh  start.sh  status.sh  yolo26_gpu_rosbridge.py  yolo26_seg_rosbridge.py
src/common_msgs/: CMakeLists.txt  package.xml
src/common_msgs/action/: ExecuteTrajectory.action  PlanExecutePose.action
src/motion_control/: CMakeLists.txt  package.xml
src/motion_control/launch/: motion_control.launch
src/motion_control/nodes/: motion_control_complete.py  motion_control_node.py
src/motion_control/scripts/: check_moveit_ik.py
src/path_planning/: CMakeLists.txt  README.md  README_EN.md  package.xml  readme_one.md
src/path_planning/config/: path_planning.rviz  planning_config.yaml
src/path_planning/launch/: aco_rrtstar_planning.launch  planning_scene_adapter.launch  prm_planner.launch
src/path_planning/nodes/: PRM_Planner.py  Planner_Scene.py  aco_rrtstar_planner_node.py  demo_one_shot_planning.py  one_shot_planner.py  plot_path_planning.py  test_aco_rrtstar.py
src/path_planning/srv/: ComputeFK.srv  ComputeIK.srv
src/perception_yolo/: requirements.txt
src/perception_yolo/launch/: camera_visualizer.launch  pointcloud_processor.launch  yolo_detector.launch
src/perception_yolo/nodes/: camera_view_capture_node.py  topic_list_node.py  yolo26_info_node.py  yolo_detector_node.py
src/robocup_brain/: CMakeLists.txt  package.xml
src/robocup_brain/launch/: brain.launch
src/robocup_brain/nodes/: brain_node.py  ur5e_teach_pendant_ui.py
