<?xml version="1.0"?>
<package format="2">
  <name>motion_control</name>
  <version>1.0.0</version>
  <description>Motion control package for UR5e robot (IK/FK/Dynamics)</description>
  
  <maintainer email="jiaxin@robocup.org">Jiaxin Liang</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>control_msgs</depend>
  <depend>common_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>moveit_msgs</depend>
  
  <exec_depend>ur_kinematics</exec_depend>
</package>
