<?xml version="1.0"?>
<package format="2">
  <name>path_planning</name>
  <version>1.0.0</version>
  <description>Path planning and collision avoidance for UR5e</description>
  
  <maintainer email="sarvin@robocup.org">Sarvin</maintainer>
  <maintainer email="chang@robocup.org">Chang Gao</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>common_msgs</depend>
  <depend>tf2_ros</depend>

  <exec_depend>message_runtime</exec_depend>
</package>
